@@ -10,9 +10,12 @@ Authors@R: c(person(given = "Guangchuang", family = "Yu",
 		    role  = "ctb"),
 	     person(given = "Vladislav", family = "Petyuk",
 	     	    email = "petyuk@gmail.com",
-		    role  = "ctb"))
+		    role  = "ctb"),
+	     person(given = "Giovanni", family = "Dall'Olio",
+	            email = "giovanni.dallolio@upf.edu",
+		    role = "ctb"))
 Author: Guangchuang Yu <guangchuangyu@gmail.com> with contributions from
-	Li-Gen Wang and Vladislav Petyuk.
+	Li-Gen Wang, Vladislav Petyuk and Giovanni Dall'Olio.
 Maintainer: Guangchuang Yu <guangchuangyu@gmail.com>
 Description: This package implements five methods proposed by
     Resnik, Schlicker, Jiang, Lin and Wang respectively
